# Godsview

./: .dockerignore  .env.example  .gitignore  .replit  ARCHITECTURE.md  AWS_PRODUCTION_VERIFICATION_REPORT.md  CLAUDE_DESIGN_PROJECT.txt  DEPLOYMENT_GUIDE.md  Dockerfile  GODSVIEW_PRODUCTION_AUDIT_AND_BLUEPRINT.md  Makefile  PHASES_12_16_SUMMARY.md  PRODUCTION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_SCORECARD.md  QUICK_START.md  README.md  SYNTHETIC_DATA_SAFETY_FIXES.md  _bp.b64  _bundle.b64  _decode_bundle.sh  _do_transfer.py  _one-commit.bundle  _phase97-121.patch  _proof.b64  _sync_test.txt  attribution_engine_explain.ts  diagnostics.ts  docker-compose.minimal.yml  docker-compose.yml  docker-entrypoint.sh  env.example  env.production.template  fragility_detector.ts  godsview_openbb 2  guided_builder.ts  mode_manager.ts  package.json  pnpm-lock.yaml  (+14 more)
services/control_plane/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/control_plane/alembic/: env 2.py
services/control_plane/app/: __init__.py  audit 2.py  config.py  db.py  deps 2.py  errors.py  logging.py  main.py  middleware.py  models.py  security.py
services/control_plane/tests/: conftest.py  test_anomaly_detectors.py  test_api_keys.py  test_audit 2.py  test_auth.py  test_broker_alpaca.py  test_broker_api.py  test_config.py  test_errors.py  test_execution_api.py  test_execution_gate.py  test_execution_live_api.py  test_flags.py  test_governance_api.py  test_health 2.py  test_learning_api.py  test_live_gate.py  test_live_trades_api.py  test_market.py  test_mcp_servers.py  test_mobile_inbox.py  test_models_phase1.py  test_openapi_contract.py  test_ops.py  test_orderflow.py  test_orderflow_detectors.py  test_portfolio_api.py  test_quant_experiments.py  test_quant_lab_backtest.py  test_quant_replay.py  test_realtime_quotes.py  test_recall.py  test_recall_api.py  test_risk_api.py  test_risk_engine.py  test_settings.py  test_setup_detectors.py  (+8 more)
(+2832 files in other folders)
