[project]
name = "godsview-control-plane"
version = "0.1.0"
description = "GodsView v2 control plane — identity, flags, audit, SLOs, orchestration"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GodsView Engineering" }]

dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<0.35",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0.35,<2.1",
  "asyncpg>=0.29,<0.31",
  "alembic>=1.13,<2.0",
  "argon2-cffi>=23.1,<24.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "structlog>=24.1,<25.0",
  "orjson>=3.10,<4.0",
  "httpx>=0.27,<0.29",
  "python-multipart>=0.0.12,<0.1",
  "redis>=5.1,<6.0",
  "itsdangerous>=2.2,<3.0",
  "ulid-py>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<7.0",
  "httpx>=0.27,<0.29",
  "aiosqlite>=0.20,<0.21",
  "anyio>=4.6,<5.0",
  "mypy>=1.13,<2.0",
  "ruff>=0.7,<0.9",
  "types-python-jose>=3.3,<4.0",
]

[project.scripts]
godsview-control-plane = "app.main:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["argon2.*", "jose.*", "ulid.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402", "F401"]
"tests/*" = ["B"]
